--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.0.2",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
+    "react-component-countdown-timer": "^0.1.8",
     "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
     "react-router-dom": "^5.2.0",
